--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 
-spring.datasource.url=jdbc:mysql:127.0.0.1:3306
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/crossword
 spring.datasource.username=crossword
 spring.datasource.password=adeliePingu
