--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### application.properties.example for shape ###
+/src/main/resources/application.properties
